--- a/day17.ipynb
+++ b/day17.ipynb
@@ -7,7 +7,15 @@
     "\n",
     "## Day 17: Pyroclastic Flow\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "My notebooks are getting messier.\n",
+    "\n",
+    "Today didn't take me quite as long as yesterday, but still took a while.\n",
+    "\n",
+    "Part 1 I just simulate the tetris blocks falling. I used a bit more classes and abstraction today. Key to not getting confused is splitting the `RockShape` class from the `FallingRock` class. As a small optimisation, the stack tracks all landed squares in the pile, but instead of using a set of points, which I started off doing, I use another class `ChamberPoints` which looks up the row number in a dict, and gets a list of 7 bools to check. Bonus rending an emoji stack of blocks.\n",
+    "\n",
+    "Part 2 luckily didn't take too long to figure out the key, the number of units added to the stack each time is either 0, 1, 2, or 3, so start run the simulation for a large number of blocks, say 10000, then taking difference in heights giving 9999 differences, or 'deltas' and search for the period. I don't know if there's a good way to search for a period other than the dumb method I implemented, but in my case it comes out to be 80 not repeated deltas at for the first 80 drops, then a period of 1740 from then on. I grab the first 80 deltas, the next 1740 deltas, create a function that spits out another function that uses some modular arithmetic, partial sums, and multiplication to look up height of the stack after N blocks have dropped, in constant time w.r.t. N. Final code doesn't take long to run although the period finding is a little slow."
    ],
    "metadata": {
     "collapsed": false
@@ -24,13 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from enum import Enum\n",
     "from typing import Iterator, Optional\n",
     "from collections import namedtuple\n",
-    "import tqdm.notebook as tqdm"
+    "import tqdm.notebook as tqdm\n",
+    "from collections import defaultdict"
    ],
    "metadata": {
     "collapsed": false
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "class Direction(Enum):\n",
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "class RockShape:\n",
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# noinspection PyTypeChecker\n",
@@ -206,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "class FallingRock:\n",
@@ -232,8 +241,6 @@
     "    def attempt_move(self, direction: Direction, chamber: 'Chamber'):\n",
     "\n",
     "        velocity = direction.velocity()\n",
-    "        for p in self.to_points():\n",
-    "            assert (p not in chamber.points), f'ready to move rock, but {p} is landed'\n",
     "\n",
     "        self.bottom_left = add(self.bottom_left, velocity)\n",
     "        points = self.to_points()\n",
@@ -255,9 +262,9 @@
     "        # move back\n",
     "        if crashed:\n",
     "            self.bottom_left = add(self.bottom_left, negate(velocity))\n",
-    "            points = self.to_points()\n",
-    "            for p in points:\n",
-    "                assert (p not in chamber.points), f'moved rock back, but {p} is landed'\n",
+    "            #points = self.to_points()\n",
+    "            #for p in points:\n",
+    "            #    assert (p not in chamber.points), f'moved rock back, but {p} is landed'\n",
     "            return False\n",
     "\n",
     "        return True"
@@ -277,7 +284,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class ChamberPoints:\n",
+    "\n",
+    "    __slots__ = ['rows']\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.rows = defaultdict(lambda: [False] * Chamber.WIDTH)\n",
+    "\n",
+    "    def add(self, point: Point):\n",
+    "        row = self.rows[point.y]\n",
+    "        row[point.x] = True\n",
+    "\n",
+    "    def __contains__(self, point: Point):\n",
+    "        return self.rows[point.y][point.x]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "class Chamber:\n",
@@ -287,7 +317,7 @@
     "    __slots__ = ['points', 'rocks', 'stack_height']\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.points: set[Point] = set()\n",
+    "        self.points = ChamberPoints()\n",
     "        self.rocks: set[FallingRock] = set()\n",
     "        self.stack_height = 0\n",
     "\n",
@@ -340,80 +370,388 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "  0%|          | 0/2022 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "cdbb4ec03e834450a6382526ba1f2655"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation ended.\n",
-      "stack height is 3232\n",
-      "\n"
-     ]
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "\n",
+    "    chamber = Chamber()\n",
+    "\n",
+    "    directions = infinite_direction_source()\n",
+    "\n",
+    "    verbose = False\n",
+    "    print_each_block = False\n",
+    "    print_end = True\n",
+    "\n",
+    "    num_blocks = 2022\n",
+    "\n",
+    "    for shape in tqdm.tqdm(infinite_rock_shape_source(limit=num_blocks), total=num_blocks):\n",
+    "\n",
+    "        rock: Optional[FallingRock] = chamber.spawn_rock(shape)\n",
+    "        if verbose:\n",
+    "            print('rock begins falling')\n",
+    "            chamber.render(rock)\n",
+    "\n",
+    "        while rock is not None:\n",
+    "\n",
+    "            direction = next(directions)\n",
+    "            if verbose:\n",
+    "                print(f'jet of gas pushes {direction}', end= '')\n",
+    "            moved = rock.attempt_move(direction, chamber)\n",
+    "            if verbose:\n",
+    "                if not moved:\n",
+    "                    print(' but nothing happened', end='')\n",
+    "                print(':')\n",
+    "                chamber.render(rock)\n",
+    "\n",
+    "            direction = Direction.DOWN\n",
+    "            if verbose:\n",
+    "                print('rock falls 1 unit', end= '')\n",
+    "            moved = rock.attempt_move(direction, chamber)\n",
+    "            if not moved:\n",
+    "                if verbose:\n",
+    "                    print(' causing it to come to a rest', end='')\n",
+    "                chamber.land(rock)\n",
+    "                rock = None\n",
+    "            if verbose:\n",
+    "                print(':')\n",
+    "            if verbose or print_each_block:\n",
+    "                chamber.render(rock)\n",
+    "\n",
+    "    print('Simulation ended.')\n",
+    "    print(f'stack height is {chamber.stack_height}')\n",
+    "    print()\n",
+    "    if not verbose and not print_each_block:\n",
+    "        if print_end:\n",
+    "            chamber.render()"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "chamber = Chamber()\n",
-    "\n",
     "directions = infinite_direction_source()\n",
-    "\n",
-    "verbose = False\n",
-    "print_each_block = False\n",
-    "print_end = False\n",
-    "\n",
-    "num_blocks = 2022\n",
-    "\n",
+    "num_blocks = 10000\n",
+    "heights = [0]\n",
     "for shape in tqdm.tqdm(infinite_rock_shape_source(limit=num_blocks), total=num_blocks):\n",
-    "\n",
     "    rock: Optional[FallingRock] = chamber.spawn_rock(shape)\n",
-    "    if verbose:\n",
-    "        print('rock begins falling')\n",
-    "        chamber.render(rock)\n",
-    "\n",
     "    while rock is not None:\n",
-    "\n",
     "        direction = next(directions)\n",
-    "        if verbose:\n",
-    "            print(f'jet of gas pushes {direction}', end= '')\n",
-    "        moved = rock.attempt_move(direction, chamber)\n",
-    "        if verbose:\n",
-    "            if not moved:\n",
-    "                print(' but nothing happened', end='')\n",
-    "            print(':')\n",
-    "            chamber.render(rock)\n",
-    "\n",
+    "        rock.attempt_move(direction, chamber)\n",
     "        direction = Direction.DOWN\n",
-    "        if verbose:\n",
-    "            print('rock falls 1 unit', end= '')\n",
     "        moved = rock.attempt_move(direction, chamber)\n",
     "        if not moved:\n",
-    "            if verbose:\n",
-    "                print(' causing it to come to a rest', end='')\n",
     "            chamber.land(rock)\n",
     "            rock = None\n",
-    "        if verbose:\n",
-    "            print(':')\n",
-    "        if verbose or print_each_block:\n",
-    "            chamber.render(rock)\n",
+    "    heights.append(chamber.stack_height)\n",
     "\n",
-    "print('Simulation ended.')\n",
-    "print(f'stack height is {chamber.stack_height}')\n",
+    "deltas = []\n",
+    "for i in range(1, len(heights)):\n",
+    "    deltas.append(heights[i] - heights[i-1])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "deltas[:10]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def is_potential_period(seq, period, required):\n",
+    "    expected = None\n",
+    "    checked = 0\n",
+    "    for start in range(0, len(seq), period):\n",
+    "        current = seq[start:start+period]\n",
+    "        if expected is None:\n",
+    "            expected = current\n",
+    "        elif len(current) < len(expected):\n",
+    "            return True\n",
+    "        elif current != expected:\n",
+    "            return False\n",
+    "        else:\n",
+    "            # current == expected\n",
+    "            checked += 1\n",
+    "            if checked >= required:\n",
+    "                return True\n",
+    "    return True\n",
+    "\n",
+    "def find_period(seq, required):\n",
+    "    maximum = len(seq) // 2\n",
+    "    for p in range(1, maximum+1):\n",
+    "        if is_potential_period(seq, p, required):\n",
+    "            yield p\n",
+    "\n",
+    "def loop_period(seq, required):\n",
+    "    for stripped in tqdm.tqdm(range(len(seq))):\n",
+    "        for potential in find_period(seq, required):\n",
+    "            print(f'Strip off the first {stripped} elements.')\n",
+    "            print(f'Then, period seems to be {potential}')\n",
+    "            return\n",
+    "        seq = seq[1:]\n",
+    "\n",
+    "loop_period(deltas, required=3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Output Saved\n",
+    "\n",
+    "    Strip off the first 80 elements.\n",
+    "    Then, period seems to be 1740"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Testing Function Reconstruction with the example"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "example_deltas = [1, 3, 3, 1, 3, 3, 7, 1, 3, 3, 7, 1, 3, 3, 7, 1, 3, 3, 7, 1, 3, 3, 7]\n",
+    "example_values = [0]\n",
+    "for d in example_deltas:\n",
+    "    example_values.append(example_values[-1] + d)\n",
+    "print(example_values)\n",
+    "\n",
+    "example_deltas_recomputed = []\n",
+    "for i in range(1, len(example_values)):\n",
+    "    example_deltas_recomputed.append(example_values[i] - example_values[i-1])\n",
+    "\n",
+    "print(f'{example_deltas = }')\n",
+    "print(f'{example_deltas_recomputed = }')\n",
+    "assert example_deltas == example_deltas_recomputed\n",
+    "print('recomputed correctly')\n",
+    "\n",
+    "loop_period(example_deltas, required=3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "header_length = 3\n",
+    "loop_part_length = 4"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "header = example_deltas[: header_length]\n",
+    "loop1 = example_deltas[header_length : header_length+loop_part_length]\n",
+    "loop2 = example_deltas[header_length+loop_part_length : header_length+loop_part_length*2]\n",
+    "loop3 = example_deltas[header_length+loop_part_length*2 : header_length+loop_part_length*3]\n",
+    "\n",
+    "print(header)\n",
     "print()\n",
-    "if not verbose and not print_each_block:\n",
-    "    if print_end:\n",
-    "        chamber.render()"
+    "print(loop1)\n",
+    "print()\n",
+    "print(loop1 == loop2)\n",
+    "print(loop2 == loop3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def reconstruct_function(header, loop):\n",
+    "    sum_header = sum(header)\n",
+    "    sum_loop = sum(loop)\n",
+    "    def f(x):\n",
+    "        assert type(x) == int\n",
+    "        assert x >= 0\n",
+    "        if x <= len(header):\n",
+    "            return sum([d for d in header[:x]])\n",
+    "        rv = sum_header + sum_loop * ((x - len(header)) // len(loop))\n",
+    "        if (x - len(header)) % len(loop) == 0:\n",
+    "            return rv\n",
+    "        else:\n",
+    "            return rv + sum(loop[:(x - len(header)) % len(loop)])\n",
+    "    return f"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "reconstructed = reconstruct_function(header, loop1)\n",
+    "for i in range(len(example_values)):\n",
+    "    print(i, reconstructed(i), example_values[i], reconstructed(i) == example_values[i], sep='\\t')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Now back to real data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "header_length = 80\n",
+    "loop_part_length = 1740\n",
+    "\n",
+    "header = deltas[: header_length]\n",
+    "loop1 = deltas[header_length : header_length+loop_part_length]\n",
+    "loop2 = deltas[header_length+loop_part_length : header_length+loop_part_length*2]\n",
+    "loop3 = deltas[header_length+loop_part_length*2 : header_length+loop_part_length*3]\n",
+    "\n",
+    "print(header)\n",
+    "print()\n",
+    "print(loop1)\n",
+    "print()\n",
+    "print(loop1 == loop2)\n",
+    "print(loop2 == loop3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('checking header add up to next')\n",
+    "print(f'{sum(header) = }')\n",
+    "print(f'{heights[header_length] = }')\n",
+    "assert sum(header) == heights[header_length]\n",
+    "print()\n",
+    "offset_height = heights[header_length]\n",
+    "print(f'must add {offset_height} to the height')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "reconstructed = reconstruct_function(header, loop1)\n",
+    "\n",
+    "for i, h in enumerate(heights):\n",
+    "    assert reconstructed(i) == h\n",
+    "\n",
+    "print('okay for all heights!')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 1 Answer (Again)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# checking answer for part 1\n",
+    "reconstructed(2022)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 2 Answer"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "reconstructed(1000000000000)"
    ],
    "metadata": {
     "collapsed": false
