fixed typos, added peppers

--- a/day18.ipynb
+++ b/day18.ipynb
@@ -5,11 +5,11 @@
    "source": [
     "# Advent of Code 2022\n",
     "\n",
-    "## Day 1: Calorie Counting\n",
+    "## Day 18: Boiling Boulders\n",
     "\n",
     "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
     "\n",
-    "Day 16 was pretty easy, and only took about 20 minutes.\n",
+    "Day 18 was pretty easy, and only took about 20 minutes.\n",
     "\n",
     "I've submitted both parts successfully but the code is a mess, so I'll tidy it later and push a nicer version to GitHub."
    ],
